--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-  
-  <article class>
-  </article>
   <head>
     <meta charset="UTF-8">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Gamewiki</title>
   </head>
 
@@ -14,25 +11,50 @@
 
     <div class="container">
       <header class="header">
-        <h1 class="header-title">Gamewiki</h1>
+        <h1 class="header_title">Gamewiki</h1>
       </header>    
       <nav class="nav">
  
-        <ul class="nav-list">
-           <li class="nav-list-item">
-             <a href="#" class="nav-list-link">遊戲</a>
+        <ul class="nav_list">
+           <li class="nav_list_item">
+             <a href="#" class="nav_list_link">遊戲</a>
+             <div class="nav_sublist">
+              <a href="#" class="nav_sublist_item">原神</a>
+              <a href="arknights.html" class="nav_sublist_item">明日方舟</a>
+              <a href="#" class="nav_sublist_item">sample</a>
+          </div>
            </li>
-           <li class="nav-list-item">
-            <a href="#" class="nav-list-link">社群</a>
+           <li class="nav_list_item">
+            <a href="#" class="nav_list_link">社群</a>
+            <div class="nav_sublist">
+              <a href="#" class="nav_sublist_item">sample</a>
+              <a href="#" class="nav_sublist_item">sample</a>
+              <a href="#" class="nav_sublist_item">sample</a>
+          </div>
           </li>
-           <li class="nav-list-item">
-             <a href="#" class="nav-list-link">最新資訊</a>
+           <li class="nav_list_item">
+             <a href="#" class="nav_list_link">最新資訊</a>
+             <div class="nav_sublist">
+              <a href="#" class="nav_sublist_item">sample</a>
+              <a href="#" class="nav_sublist_item">sample</a>
+              <a href="#" class="nav_sublist_item">sample</a>
+          </div>
             </li>
-            <li class="nav-list-item">
-               <a href="#" class="nav-list-link">其他</a>
+            <li class="nav_list_item">
+               <a href="#" class="nav_list_link">其他</a>
+               <div class="nav_sublist">
+                <a href="#" class="nav_sublist_item">sample</a>
+                <a href="#" class="nav_sublist_item">sample</a>
+                <a href="#" class="nav_sublist_item">sample</a>
+            </div>
              </li>
-               <li class="nav-list-item">
-               <a href="#" class="nav-list-link">關於我們</a>
+               <li class="nav_list_item">
+               <a href="#" class="nav_list_link">關於我們</a>
+               <div class="nav_sublist">
+                <a href="#" class="nav_sublist_item">sample</a>
+                <a href="#" class="nav_sublist_item">sample</a>
+                <a href="#" class="nav_sublist_item">sample</a>
+            </div>
             </li>
          </ul>
       </nav>
