--- a/arknights.html
+++ b/arknights.html
@@ -10,30 +10,41 @@
     <body>
         <div class="arkscontainer">
             <header class="header">
-                <h1 class="header-title">明日方舟</h1>
+                <h1 class="header-title"></h1>
             </header> 
 
             <nav class="nav2">
-                <ul class="nav2-list">
-                    <li class="nav2-list-item">
-                      <a href="#" class="nav2-list-link">首頁</a>
+                <ul class="nav2_list">
+                    <li class="nav2_list_item">
+                      <a href="#" class="nav2_list_link">首頁</a>
                     </li>
-                    <li class="nav2-list-item">
-                     <a href="#" class="nav2-list-link">幹員圖鑑</a>
+                    <li class="nav2_list_item">
+                     <a href="#" class="nav2_list_link">幹員圖鑑</a>
                    </li>
-                     <li class="nav2-list-item">
-                        <a href="#" class="nav2-list-link">素材掉率</a>
+                     <li class="nav2_list_item">
+                        <a href="#" class="nav2_list_link">素材掉率</a>
                       </li>
-                        <li class="nav2-list-item">
-                        <a href="#" class="nav2-list-link">關卡</a>
+                        <li class="nav2_list_item">
+                        <a href="#" class="nav2_list_link">關卡</a>
                      </li>
                   </ul>
             </nav>
             <main class="main2">
                 <div class="mainpic2">
-                  <div><a href="#" target="_blank"><img src="arknights img\幹員.jpg"  ></a></div>
-                  <div><a href="#" target="_blank"><img src="arknights img\關卡.jpg" /></a></div>
-               
+                  <ul class="gallery2 row2">
+                    <li class="gallery2_item col2" data-title="幹員" >
+                      <a href="#" class="gallery2_item-link"><img src="img2\幹員.jpg" ></a>
+                    </li>
+                    <li class="gallery2_item col2" data-title="關卡" >
+                      <a href="#" class="gallery2_item-link"><img src="img2\關卡.jpg" ></a>
+                    </li>
+                    <li class="gallery2_item col2" data-title="素材掉率">
+                      <a href="#" class="gallery2_item-link"><img src="img2\幹員.jpg" ></a>
+                    </li>
+                    <li class="gallery2_item col2" data-title="關卡">
+                      <a href="#" class="gallery2_item-link"><img src="img2\關卡.jpg" ></a>
+                    </li>
+                </ul>
                 </div>
              </main> 
 
