--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
            <li class="nav_list_item">
              <a href="#" class="nav_list_link">遊戲</a>
              <div class="nav_sublist">
-              <a href="#" class="nav_sublist_item">原神</a>
               <a href="arknights.html" class="nav_sublist_item">明日方舟</a>
-              <a href="#" class="nav_sublist_item">sample</a>
+              <a href="#" class="nav_sublist_item">原神</a>
+              <a href="#" class="nav_sublist_item">少女前線</a>
           </div>
            </li>
            <li class="nav_list_item">
@@ -66,7 +66,7 @@
         <div class="mainpic">
           <ul class="gallery row">
             <li class="gallery_item col" data-title="明日方舟" data-company="開發商:鷹角網路">
-              <a href="https://wiki.biligame.com/arknights/" class="gallery_item-link"><img src="img\1200px-明日方舟.jpg" ></a>
+              <a href="https://wiki.biligame.com/arknights/" class="gallery_item-link"><img src="img\1200px-明日方舟_黎明前奏先导视觉图.jpg" ></a>
             </li>
             <li class="gallery_item col" data-title="原神" data-company="開發商:米哈遊miHoYo">
               <a href="https://wiki.biligame.com/ys"  class="gallery_item-link"><img src="img\genshin2.jpg" /></a>
