--- a/arknights.html
+++ b/arknights.html
@@ -16,7 +16,7 @@
             <nav class="nav2">
                 <ul class="nav2_list">
                     <li class="nav2_list_item">
-                      <a href="#" class="nav2_list_link">首頁</a>
+                      <a href="arknights.html" class="nav2_list_link">首頁</a>
                     </li>
                     <li class="nav2_list_item">
                      <a href="#" class="nav2_list_link">幹員圖鑑</a>
@@ -24,9 +24,13 @@
                      <li class="nav2_list_item">
                         <a href="#" class="nav2_list_link">素材掉率</a>
                       </li>
-                        <li class="nav2_list_item">
+                   <li class="nav2_list_item">
                         <a href="#" class="nav2_list_link">關卡</a>
                      </li>
+                   <li class="nav2_list_item">
+                      <a href="#" class="nav2_list_link">集成戰略</a>
+                   </li>
+                     
                   </ul>
             </nav>
             <main class="main2">
@@ -39,10 +43,10 @@
                       <a href="#" class="gallery2_item-link"><img src="img2\關卡.jpg" ></a>
                     </li>
                     <li class="gallery2_item col2" data-title="素材掉率">
-                      <a href="#" class="gallery2_item-link"><img src="img2\幹員.jpg" ></a>
+                      <a href="#" class="gallery2_item-link"><img src="img2\素材掉率.jpg" ></a>
                     </li>
-                    <li class="gallery2_item col2" data-title="關卡">
-                      <a href="#" class="gallery2_item-link"><img src="img2\關卡.jpg" ></a>
+                    <li class="gallery2_item col2" data-title="集成戰略">
+                      <a href="#" class="gallery2_item-link"><img src="img2\集成戰略.jpg" ></a>
                     </li>
                 </ul>
                 </div>
