--- a/arknights.html
+++ b/arknights.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <meta name="viewport" content="width=device-width,initial-scale=1"?>
         <meta charset="UTF-8">
         <link href="css/css2/arknights.css" rel="stylesheet" type="text/css">
         <link href="css/normalize.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
         <title>Arknights</title>
+        <div class="desktop">電腦版</div>
+        <div class="mobile">手機版</div>
      </head>
  
     <body>
