--- a/arknights.html
+++ b/arknights.html
@@ -20,7 +20,7 @@
             <nav class="nav2">
                 <ul class="nav2_list">
                     <li class="nav2_list_item">
-                     <a href="#" class="nav2_list_link">幹員圖鑑</a>
+                     <a href="operator.html" class="nav2_list_link">幹員圖鑑</a>
                    </li>
                      <li class="nav2_list_item">
                         <a href="#" class="nav2_list_link">素材掉率</a>
@@ -50,7 +50,7 @@
                 <div class="mainpic2">
                   <ul class="gallery2 row2">
                     <li class="gallery2_item col2" data-title="幹員"data-content="角色圖鑑 培養素材 技能 故事 語音" >
-                      <a href="#" class="gallery2_item-link"><img src="imgs\img2\幹員.jpg" ></a>
+                      <a href="operator.html" class="gallery2_item-link"><img src="imgs\img2\幹員.jpg" ></a>
                     </li>
                     <li class="gallery2_item col2" data-title="關卡"data-content="主線 活動 資源收集 剿滅作戰 "  >
                       <a href="#" class="gallery2_item-link"><img src="imgs\img2\關卡.jpg" ></a>
@@ -64,6 +64,9 @@
                 </ul>
                 </div>
              </main> 
+
+
+             
              <footer class="footer">
               <p>Designed by Taihen for Mid-term project</p> 
           </footer>
