--- a/operator.html
+++ b/operator.html
@@ -8,10 +8,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <title>Arknights</title>
-  <div class="desktop">電腦版</div>
-  <div class="mobile">手機版</div>
 </head>
-
 <body>
   <div class="arkscontainer">
     <header class="header">
@@ -32,7 +29,7 @@
           <a href="#" class="nav2_list_link">集成戰略</a>
         </div>
         <div class="nav2_list_item">
-          <a href="arknights.html" class="nav2_list_link">回首頁</a>
+          <a href="arknights.html" class="nav2_list_link">回主頁</a>
         </div>
       </div>
     </nav>
@@ -124,9 +121,6 @@
         </div>
         <div class="operator1_item col2" data-title="桃金娘">
           <a href="#" class="operator1_item_link"><img src="imgs\operator\桃金娘.jpg"></a>
-        </div>
-        <div class="operator1_item col2" data-title="芬">
-          <a href="#" class="operator1_item_link"><img src="imgs\operator\芬.jpg"></a>
         </div>
       </div>
     </div>
